--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -18,11 +18,21 @@
     --color-border: 214.3 31.8% 91.4%;
 
     --color-accent: 233 90% 61%;
+
+    --color-purple: 248 100% 88%;
+
+    --color-green: 136 100% 91%;
+
+    --color-yellow: 58 85% 87%;
+
+    --color-sky: 198 100% 87%;
+
+    --color-dark-green: 194 39% 26%;
   }
 
   /* html[data-theme='light'] { */
   html.light {
-    --color-bg: 0 0% 100%;
+    --color-bg: 0 0% 99%;
 
     /* --color-muted: 210 40% 96.1%; */
     --color-muted: 0 0% 25%;
@@ -96,6 +106,10 @@ html.lenis {
   font-size: 4rem;
 }
 
+.font-subtitle {
+  font-size: 3rem;
+}
+
 .btn-cta {
   position: relative;
   color: white;
@@ -125,10 +139,65 @@ html.lenis {
   margin: 0 auto;
   padding: 0 5rem;
   min-height: 100vh;
-  width: 100%;
   overflow-x: hidden;
 }
 
+/* Header */
+.header {
+  color: hsl(210, 40%, 96.1%);
+}
+
+.header-border {
+  border-color: hsl(0, 0%, 16%);
+}
+
+.header-bg-clr {
+  background: hsla(223, 30%, 05%, 0.6);
+}
+
+.header-font-clr {
+  background: hsla(210, 40%, 96.1%, 0.7);
+}
+
+/* Hero */
 .hero {
   min-height: calc(100vh - var(--header-height));
+  color: hsl(210, 40%, 96.1%);
+  overflow: hidden;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  height: 100svh;
+  background-color: hsla(0, 0%, 0%, 0.35);
+  z-index: -1;
+}
+
+.hero-text {
+  color: hsl(0, 0%, 83%);
+}
+
+.hero-text-dark {
+  color: hsl(223, 47%, 11%);
+}
+
+.hero__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  height: 100svh;
+  object-fit: cover;
+  z-index: -1;
+  overflow: hidden;
 }
