--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -246,6 +246,7 @@ html.lenis {
   overflow: hidden;
 }
 
+
 .hero::before {
   content: '';
   position: absolute;
@@ -256,7 +257,7 @@ html.lenis {
   width: 100%;
   height: 100vh;
   height: 100svh;
-  background-color: hsla(0, 0%, 0%, 0.35);
+  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.35) 5%, hsla(0, 0%, 0%, 0));
   z-index: -1;
 }
 
@@ -280,4 +281,34 @@ html.lenis {
   object-fit: cover;
   z-index: -1;
   overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .main-container {
+    padding: 0 2rem;
+  }
+
+  /* General styles */
+  .font-title {
+    font-size: 3rem;
+  }
+
+  .font-subtitle {
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .main-container {
+    padding: 0 1.5rem;
+  }
+
+  /* General styles */
+  .font-title {
+    font-size: 2.8rem;
+  }
+
+  .font-subtitle {
+    font-size: 2.25rem;
+  }
 }
