--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -180,6 +180,29 @@ html.lenis {
   min-height: 100%;
 }
 
+.parallax {
+  overflow: hidden;
+  letter-spacing: -2px;
+  line-height: 0.8;
+  margin: 0;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.parallax .scroller {
+  text-transform: uppercase;
+  display: flex;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.parallax span {
+  display: block;
+  margin-right: 30px;
+}
+
 /* Header */
 .header {
   color: hsl(210, 40%, 96.1%);
